Creating Home Page update

--- a/Assignment/Assessment.css
+++ b/Assignment/Assessment.css
@@ -65,6 +65,9 @@ main {
     margin-right:6em ;
 }
 
-h1 {
-     ;
+.image {
+    margin-top:2em ;
+    margin-left:22.5em ;
+    margin-right:10em ;
+
 }
