--- a/Assignment/Assessment.css
+++ b/Assignment/Assessment.css
@@ -26,8 +26,8 @@ list-style: none;
 
 nav li {
     display: inline-block;
-    margin-right: 6em;
-    margin-left: 6em;
+    margin-right: 5.6em;
+    margin-left: 5.6em;
     padding-top: 1.1em;
     padding-bottom: 1.1em;
     position: relative;
@@ -74,8 +74,14 @@ main {
 
 }
 
-aside {
-    background-color: lightblue;
-    grid-area: aside;
+.column {
+    float: left;
+    width: 48%;
+    padding: 10px;
+}
 
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
