--- a/Assignment/Assessment.css
+++ b/Assignment/Assessment.css
@@ -2,7 +2,7 @@ header {
     background-color: lightblue;
     color: black;
     display: block;
-    font-size: 4em;
+    font-size: 3em;
     text-align: center;
 }
 
@@ -10,7 +10,7 @@ body{
 background-color: lightblue;
 display: grid;
 grid-template-columns: 100%;
-grid-template-rows: 10%;
+grid-template-rows: 9% 7% 50%;
 grid-template-areas: 
 "header" 
 "nav"
@@ -24,6 +24,7 @@ nav {
 float: left;
 background-color:lightgreen;
 color: white;
+height: 3em;
 
 }
 
@@ -81,7 +82,6 @@ main {
     margin-left: auto;
     margin-right: auto }
 
-}
 
 .column {
     float: left;
