--- a/Assignment/Mobilephone.css
+++ b/Assignment/Mobilephone.css
@@ -1,4 +1,4 @@
-nav {
+ nav {
     display: none;
 }
 
@@ -23,4 +23,22 @@ body {
     margin-top:2em ;
     margin-left:5em ;
     margin-right:10em ;
+}
+
+.shownav {
+    height: 0.8em;
+    width: 1em;
+    display: block;
+    border-top: 0.1em solid white;
+    border-bottom: 0.1em solid white;
+    border-radius: 0.1em;
+}
+
+.shownav:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    top: 0.3em;
+    left: 0px;
+    border-top: 0.2em solid white;
 }
