--- a/Assignment/Mobilephone.css
+++ b/Assignment/Mobilephone.css
@@ -25,20 +25,18 @@ body {
     margin-right:10em ;
 }
 
-.shownav {
-    height: 0.8em;
-    width: 1em;
-    display: block;
-    border-top: 0.1em solid white;
-    border-bottom: 0.1em solid white;
-    border-radius: 0.1em;
+.hamburgercontainer{
+    width: 2.7em;
+    height: 2em;
+    cursor:pointer;
+
 }
 
-.shownav:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    top: 0.3em;
-    left: 0px;
-    border-top: 0.2em solid white;
+.hamburger{
+    width: 35px;
+    height: 5px;
+    background-color: black;
+    margin: 6px;
+    cursor: pointer;
+
 }
