--- a/Assignment/Assessment.css
+++ b/Assignment/Assessment.css
@@ -4,13 +4,14 @@ header {
     display: block;
     font-size: 3em;
     text-align: center;
+    font-family: 'Do Hyeon', sans-serif;
 }
 
 body{
 background-color: lightblue;
 display: grid;
 grid-template-columns: 100%;
-grid-template-rows: 4em 3em 0em 2em;
+grid-template-rows: 4em 3em 2.5em 2em;
 grid-template-areas: 
 "header" 
 "nav"
@@ -32,12 +33,13 @@ nav ul {
 margin: 0;
 padding: 0;
 list-style: none;
+font-family: 'Staatliches', cursive;
 }
 
 nav li {
     display: inline-block;
     margin-right: 5.8em;
-    margin-left: 5.8em;
+    margin-left: 6.5em;
     padding-top: 1.1em;
     padding-bottom: 1.1em;
     position: relative;
@@ -113,4 +115,20 @@ form {
 
 .submit{
     grid-column: 2;
+}
+
+p {
+    font-family: 'PT Sans', sans-serif;
+}
+
+h {
+    font-family: 'PT Sans', sans-serif;
+    font-size: 2em;
+
+}
+
+h1 {
+
+    font-family: 'PT Sans', sans-serif;
+    font-size: 1em;
 }
