--- a/Assignment/Mobilephone.css
+++ b/Assignment/Mobilephone.css
@@ -40,3 +40,28 @@ body {
     cursor: pointer;
 
 }
+
+ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: lightgreen;
+    top: 80px;
+    left: 0;
+    text-align: center;
+
+}
+
+nav ul li {
+    display: block;
+
+}
+
+nav ul li a{
+    font-size: 20px;
+}
+
+a:hover,a.active {
+    background: none;
+    color: red;
+}
